--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/ui": "^3.2.0",
     "@unhead/vue": "^2.0.11",
+    "@vueuse/core": "^13.5.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
