--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,15 @@
     "@nuxt/ui": "^3.2.0",
     "@unhead/vue": "^2.0.11",
     "@vueuse/core": "^13.5.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
+    "chart.js": "^4.5.0",
+    "dayjs": "^1.11.13",
+    "monaco-editor": "^0.52.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
+    "vue-i18n": "^11.1.9",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
