--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,10 @@ jobs:
           submodules: recursive
       - uses: dAppServer/wails-build-action@main
         with:
+          wails-version: 2.10.1
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
           build-obfuscate: true
+          package: false
+          go-version: 1.23
+          node-version: 22.x
