feat: add DownloadFile & test download version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: dAppServer/wails-build-action@main
         with:
           wails-version: v2.10.1
+          wails-build-webview2: embed
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
           build-obfuscate: false
