--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "monaco-editor": "^0.52.2",
+    "motion-v": "^1.5.0",
     "pinia": "^3.0.1",
+    "unplugin-vue-components": "^28.8.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-i18n": "^11.1.9",
